# tiralabra-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: aihemaarittely.md
include/: bitbuffer.hpp  common.hpp  decoder.hpp  encoder.hpp  input.hpp  output.hpp  progressbar.hpp  stringtable.hpp  tempfilenames.hpp  testoutput.hpp
project-docs/: aihemaarittely.md  määrittelydokumentti.md  määrittelydokumentti.odt  testausdokumentti.md  testausdokumentti.odt  toteutusdokumentti.md  toteutusdokumentti.odt  viikkoraportti-vk1.md  viikkoraportti-vk2.md  viikkoraportti-vk3.md  viikkoraportti-vk4.md  viikkoraportti-vk5.md  viikkoraportti-vk6.md
src/: decoder.cpp  encoder.cpp  input.cpp  main.cpp  output.cpp  progressbar.cpp  stringtable.cpp  tempfilenames.cpp  testoutput.cpp
test-resources/: directory.tar  numbers.txt  simple.txt  simple_long.txt
test-resources/directory/: file1  file2  file3  file4
tests/: CMakeLists.txt  bitbuffertest.cpp  encodertest.cpp  inputtest.cpp  integrationtest.cpp  outputtest.cpp  stringtabletest.cpp  testoutput.cpp  testoutput.hpp  testoutputtest.cpp  testtest.cpp
